# y-autoresearch

./: .gitignore  README.md  cli.py  pyproject.toml
.claude/commands/ygg-build/: improve.md  preview.md
.claude/skills/ygg-build/: SKILL.md
.claude/skills/ygg-build/references/: architect-protocol.md
.opencode/commands/: ygg_build.md  ygg_build_improve.md  ygg_build_preview.md
.opencode/skills/ygg_build/: SKILL.md
.opencode/skills/ygg_build/references/: codegen-patterns.md  improvement-loop.md
examples/: customer_support.md  parallel_analysis.md  research_assistant.md
framework/: __init__.py  architect.py  builder.py  codegen.py  loop.py  models.py  prompts.py  validator.py
scripts/: install-opencode.sh  install.sh
